# aws_server

./: .gitignore  ALERTS_RS_MIGRATION.md  AWS_MIGRATION_GUIDE.md  DEPLOYMENT_GUIDE.md  PROJECT_REVIEW.md  README.md  TERRAFORM_STATE_SETUP.md  build_and_push.sh
.github/workflows/: deploy-rust-api.yml  deploy.yml  terraform.yml
docs/ops/: DEPLOYMENT.md  ECR.md  FIREBASE.md  RESTART.md
infra/: .gitignore  README.md  deploy.ps1  install-prerequisites.ps1
infra/db/: Dockerfile.migration
scripts/: bootstrap-terraform-state.sh  cloudshell-migration.sh
services/: Cargo.toml
services/rust_api/: Cargo.toml  Dockerfile  docker.rust_api.yaml  entrypoint.sh
services/rust_api/src/: auth.rs  config.rs  debug_handler.rs  lib.rs  main.rs
services/rust_api/src/db/: mod.rs
services/rust_api/src/handlers/: camera_stream.rs  hardware.rs  health.rs  mod.rs  public_info.rs  text_info.rs  token.rs  ws.rs  yolo_api.rs
services/rust_api/src/middleware/: hardware_auth.rs  mod.rs  production_auth.rs  rate_limit.rs  security.rs
services/rust_api/src/models/: alert.rs  dashboard.rs  hardware.rs  mod.rs  review_queue.rs  validation.rs
services/rust_api/src/routes/: alerts.rs  dashboard.rs  feedback.rs  hardware.rs  mod.rs  ping.rs
services/rust_api/src/services/: Storage.rs  alert_service.rs  circuit_breaker.rs  device_service.rs  geofence.rs  heartbeat.rs  image_service.rs  minio_client.rs  mod.rs  mqtt_bus.rs  mqtt_monitor.rs  review_queue.rs  sqs_service.rs  ws.rs  yolo_training.rs
services/rust_api/src/utils/: jwt.rs  mod.rs  sample_data.rs
services/rust_api/static/: dashboard.html
(+94 files in other folders)
